--- a/index.html
+++ b/index.html
@@ -46,27 +46,12 @@
       <section id="home">
         <div class="me">
           <h1>Web Devoloepr <i class="fa-solid fa-code"></i></h1>
-        <p>Saya adalah Junioar Web Devoloepr</p>
+          <p>Saya adalah Junioar Web Devoloepr</p>
         </div>
-        
-
       </section>
     </main>
 
-    <script>
-      const toggleBtn = document.querySelector('.toggle_btn')
-      const toggleBtnIcon = document.querySelector('.toggle_btn i')
-      const dropDownMenu = document.querySelector('.dropdown-menu')
-
-      toggleBtn.onclick = function () {
-        dropDownMenu.classList.toggle('open')
-        const isOpen = dropDownMenu.classList.contains('open')
-
-        toggleBtnIcon.classList = isOpen
-        ? 'fa-solid fa-xmark'
-        : 'fa-solid fa-bars'
-      }
-
-    </script>
+    </script> -->
+    <script src="app/js/hamburger.js"></script>
   </body>
 </html>
